--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site
-title:              AI Resume
-bio:                'Test'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              Kim Roder
+bio:                'My Artificial Intelligence Resume'
+description:        "This is the collective history of my blatantly unimpressive Machine Learing skillset"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://taylantatli.github.io/Moon
+url:                https://thediscomole.github.io/machine-learning-resume
 
 # Jekyll
 permalink:          /:title/
