--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,10 @@
 # Site navigation links
 
+- title: Resume
+  url: /resume/
+
 - title: Projects
   url: /projects/
+
+- title: Random
+  url: /random/
