--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   TheDiscoMole
 email:              kim.roder@gmail.com
 #twitter:            username
 #facebook:           username
-github-url:         https://github.com/TheDiscoMole
+github-url:         TheDiscoMole
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
