--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/face.jpg'
 background:         'assets/img/background2.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://thediscomole.github.io/Website
+url:                https://thediscomole.github.io/portfolio
 
 # Jekyll
 permalink:          /:title/
