--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Kim Roder
-bio:                'Artificial Intelligence Resume'
-description:        "This contains the summarised history of my modestly ordinary Machine Learning skillset."
+bio:                'Machine Learning Resume'
+description:        "Short summary of my Machine Learning skillset."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/face.jpg'
