--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Kim Roder
-bio:                'Machine Learning Resume'
-description:        "A short description of my Machine Learning skillset."
+bio:                'Backend & Machine Learning Resume'
+description:        "A short description of my Software Development skillset."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/face.jpg'
