--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Kim Roder
-bio:                'Backend & Machine Learning Resume'
+bio:                'Backend Development & Machine Learning Resume'
 description:        "A short description of my Software Development skillset."
 reading_time:       true
 words_per_minute:   200
